# BiodataNER

./: .gitignore  Dockerfile  README.md  cache.csv  create_cache.sh  entity_cache.py  entity_spec.json  namespaces_tags.csv  pyproject.toml  viaf_extractor.py
bash_scripts/: create_and_update.sh  create_cache.sh  update_cmdis.sh
python_scripts/: __init__.py  cmdi_extractor.py  entity_cache.py  fill_cache.py  update_cmdi.py  webapp.py
