[tool.poetry]
name = "BiodataNER"
version = "0.1.0"
description = ""
authors = ["Emanuel Dima <emanueldima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.2"
lxml = "^4.6.3"
pandas = "^1.3.3"
requests = "^2.26.0"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
